# CampaingManager

./: Cargo.toml  README.md
blob_creator/: .gitignore  Cargo.toml
blob_creator/src/: main.rs
campaing_manager/: Cargo.toml
campaing_manager/src/: helper_functions.rs  main.rs  state.rs
campaing_manager/src/print/: mod.rs  print.rs
campaing_manager/src/print/creature_print/: ability_scores.rs  ac.rs  damage_mod.rs  focus.rs  hp.rs  mod.rs  print.rs  saves.rs  trait_type.rs
campaing_manager/src/print/creature_print/items/: action.rs  armor.rs  attack.rs  consumable.rs  equipment.rs  mod.rs  skill.rs  spell.rs  spell_entry.rs  treasure.rs  weapon.rs
creature/: Cargo.toml
creature/src/: helper_functions.rs  lib.rs
creature/src/creature/: ability_scores.rs  ac.rs  damage_mod.rs  focus.rs  hp.rs  mod.rs  saves.rs  trait_type.rs  traits.rs
creature/src/creature/items/: action.rs  action_value.rs  armor.rs  attack.rs  consumable.rs  equipment.rs  mod.rs  skill.rs  spell.rs  spell_entry.rs  treasure.rs  weapon.rs
parser/: Cargo.toml
parser/src/: helper_functions.rs  lib.rs  state.rs
parser/src/desc_parser/: mod.rs
render_api/: Cargo.toml
render_api/src/: config.rs  lib.rs  uploader.rs
