[package]
name = "imgui_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
bincode = "1.3.3"
chrono = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
rayon = "*"
creature = {path = "../creature"}