[package]
name = "render_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.8"
imgui-wgpu = {path = "vendor/imgui_wgpu"}
imgui-winit-support = "0.8"
pollster = "0.2" # for block_on executor
winit = "0.25"
wgpu = "0.11"
anyhow = "*"